Add save function to save previous entries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="result">0</p>
         <button class="increment btn">Increment</button>
         <button class="save btn">Save</button>
-        <p>Previous entries: </p>
+        <p id="log">Previous entries: </p>
 
     </main>
 </body>
